# alpasim

./: .gitignore  CONTRIBUTING.md  MAINTAINERS.md  README.md  pyproject.toml  trajdata_config_example.yaml  user_config_parallel.yaml  user_config_parallel_all_scenes.yaml
docs/: OPERATIONS.md  TUTORIAL.md
src/driver/src/alpasim_driver/models/: ar1_model.py
src/grpc/alpasim_grpc/v0/: sensorsim.proto
src/render/: base_renderer.py  mtgs_sensorsim_server.py  mtgs_sensorsim_service.py  pyproject.toml
src/render/src/: __init__.py  digitaltwin.py  mtgs.py
src/render/src/gaussian_model/: rigid_object.py  rigid_object_mirrored.py  vanilla_gaussian_splatting.py
src/render/src/utils/: gaussian_utils.py  geometry_utils.py  portable_utils.py
src/runtime/: README.md
src/runtime/alpasim_runtime/: camera_catalog.py  config.py  dispatcher.py  loop.py
src/runtime/alpasim_runtime/prepare_data/: __init__.py  __main__.py
src/runtime/alpasim_runtime/services/: digitaltwin_sensorsim_server.py  digitaltwin_sensorsim_service.py  mtgs_sensorsim_server.py  mtgs_sensorsim_service.py  sensorsim_service.py
src/runtime/alpasim_runtime/simulate/: __main__.py
src/runtime/alpasim_runtime/worker/: ipc.py  main.py  pool.py
src/utils/alpasim_utils/: artifact.py  data_source_loader.py  digitaltwin_artifact_adapter.py  geometry_utils.py  mtgs_artifact_adapter.py  scenario.py  scene_data_source.py  trajdata_artifact_converter.py  trajdata_data_source.py  trajectory.py
src/wizard/configs/: base_config.yaml
